{{$NEXT}}

0.0992    2014-02-10 02:01:18 America/Los_Angeles

      [ENHANCEMENTS]

      - The "list" command now has a --all option that causes it to list
      every package in every distribution in the repository, including past
      releases and distributions that are not currently registered on any
      stack.  When using the --all option, the output includes two extra flags:
      "m" means that the package is considered to be the main module in the
      distribution. "x" means that the package can be included in the index.
      For both of these, the flags will appear as "-" when they are false.

      - The --packages, --distributions, and --authors filtering options on
      the "list" command are now treated as regular expressions.  Take care
      to quote them if you use any special shell metacharacters.

      [BUG FIXES]

      - Fixed regression in the "pin", "unpin", and "unregister" commands
      which resulted in a warning from DBIx::Class about returning multiple
      rows for a find() query.

0.0991    2014-01-31 17:19:17 America/Los_Angeles

      [INCOMPATIBLE CHANGES]

      - The --skip-missing-prerequisites option has been replaced with two
      separate options: 1)  --skip-missing-prerequisite (without the final "s")
      requires you to specify the name of the packages you want to skip.  This
      option can be repeated.  2) --skip-all-missing-prerequisites does not
      require an argument and causes Pinto to skip all missing prereqs.  These
      options can be abbreviated as -k and -K respectively.

0.099     2014-01-28 12:30:49 America/Los_Angeles


      [INCOMPATIBLE CHANGES]

      - The logic that Pinto uses to construct the index has changed.   The
      index will now include packages only if they are contained in a file with a
      matching name.  For example, Foo::Bar must be in a file called Bar.pm.  So
      in effect, Pinto will only index packages that can be use'd or require'd and